--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -23,6 +23,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Django checks
-        run: |
-          python project/manage.py check
+        run: python project/manage.py check
+
+      - name: Run Django tests
+        run: python project/manage.py test
 
